--- a/vanilla/pages/register.html
+++ b/vanilla/pages/register.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="">
 </head>
 <body>
-    Фреймворки Демо
+    <div>
+        Здесь будет отображаться форма регистрации пользователя.
+    </div>
 </body>
 </html>
