--- a/vanilla/pages/index.html
+++ b/vanilla/pages/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div>
-        Здесь будут отображаться картинки с подписями и пагинацией.
+        <a href="register.html">Страница регистрации пользователя.</a><br>
+        <a href="login.html">Страница логина пользователя.</a><br>
+        <a href="photos.html">Фотографии.</a><br>
+        <a href="profile.html">Профиль пользователя.</a>
     </div>
 </body>
 </html>
