index.html page

--- a/vanilla/pages/index.html
+++ b/vanilla/pages/index.html
@@ -4,14 +4,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Фреймворки Демо</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <div>
-        <a href="register.html">Страница регистрации пользователя.</a><br>
-        <a href="login.html">Страница логина пользователя.</a><br>
-        <a href="photos.html">Фотографии.</a><br>
-        <a href="profile.html">Профиль пользователя.</a>
+    <div class="container-fluid bg-primary">
+        <h2 class="text-white">Vanilla JS Демо</h2>
+    </div>
+    <div class="col-lg-4 col-lg-offset-4">
+        <h3>Страницы приложения</h3>
+        <ul class="nav navbar">
+            <li>
+                <a href="register.html">Форма регистрации пользователя.</a>
+            </li>
+            <li>
+                <a href="login.html">Форма логина пользователя.</a>
+            </li>
+            <li>
+                <a href="photos.html">Фотографии.</a>
+            </li>
+            <li>
+                <a href="profile.html">Профиль пользователя.</a>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
