app pages markup

--- a/vanilla/pages/photos.html
+++ b/vanilla/pages/photos.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Фреймворки Демо</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
+    <div class="container-fluid bg-primary">
+        <h2 class="text-white">Vanilla JS Демо</h2>
+    </div>
     <div>
         Здесь будет отображаться фотографии с пагинацией.
     </div>
