--- a/vanilla/pages/profile.html
+++ b/vanilla/pages/profile.html
@@ -4,11 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Фреймворки Демо</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <div>
-        Здесь будет отображаться профиль пользователя.
+    <div class="container-fluid bg-primary">
+        <h2 class="text-white">Vanilla JS Демо</h2>
+    </div>
+    <div class="col-lg-offset-1">
+        <h3>{UserName}</h3>
+        <div>ID: {Id}</div>
     </div>
 </body>
 </html>
